tp-fichier correction ex 1